[package]
name = "testresults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
plotters = "0.3.5"
zingo-testutils = { git = "https://github.com/zancas/zingolib.git", branch = "allow_analysis" }
zingolib = { git = "https://github.com/zancas/zingolib.git", branch = "allow_analysis" }
zingoconfig = { git = "https://github.com/zancas/zingolib.git", branch = "allow_analysis" }
tokio =  { version = "1.24.2", features = ["full"] }
json = "0.12.4"


