[package]
name = "analysis-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { package = "macros", path = "macros" }
clap = { version = "4.3.11", features = ["derive"] }
plotters = "0.3.5"
zingo-testutils = { path = "../zingolibs/default/zingo-testutils" }
zingolib = { path = "../zingolibs/default/zingolib" }
zingoconfig = { path = "../zingolibs/default/zingoconfig" }
tokio =  { version = "1.24.2", features = ["full"] }
json = "0.12.4"
