[package]
name = "analysis-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { package = "macros", path = "macros" }
clap = { version = "4.3.11", features = ["derive"] }
plotters = "0.3.5"
zingo-testutils = { path = "../zingolibs/dev/zingo-testutils" }
zingolib = { path = "../zingolibs/dev/zingolib" }
zingoconfig = { path = "../zingolibs/dev/zingoconfig" }
tokio =  { version = "1.24.2", features = ["full"] }
json = "0.12.4"
serde = "1.0.183"
serde_json = "1.0.105"

[patch.crates-io]
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
shardtree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "bae25ad89c0c192bee625252d2d419bd56638e48" }
   